--- a/templates/multi-currency/multi-currency.twig
+++ b/templates/multi-currency/multi-currency.twig
@@ -41,7 +41,7 @@
             <h3>{{ strings.headers.currencies }}</h3>
         </div>
 
-        <div id="wcml-multicurrency-options" class="wcml-section-content wcml-section-content-wide"></div>
+        <div id="wcml-multicurrency-options" class="js-wcml-react-ui wcml-section-content wcml-section-content-wide"></div>
 
         <ul id="display_custom_prices_select" {% if multi_currency_on is empty %}style="display: none;"{% endif %}>
             <li>
