--- a/templates/troubleshooting.twig
+++ b/templates/troubleshooting.twig
@@ -90,16 +90,26 @@
                 </label>
             </li>
             <li>
+                <label>
+                    <input type="checkbox" id="register_reviews_in_st" />
+                    {{ strings.register_reviews_in_st }}
+                    <span class="unregistered_reviews_status">{{ unregistered_reviews }}</span>
+                    <span>{{ strings.left }}</span>
+                </label>
+            </li>
+            <li>
                 <button type="button" class="button-secondary" id="wcml_trbl">{{ strings.start }}</button>
                 <input id="count_prod_variat" type="hidden" value="{{ prod_with_variations }}"/>
                 <input id="count_prod" type="hidden" value="{{ prod_count }}"/>
                 <input id="count_galleries" type="hidden" value="{{ prod_count }}"/>
+                <input id="count_unregistered_reviews" type="hidden" value="{{ unregistered_reviews }}"/>
                 <input id="count_categories" type="hidden" value="{{ prod_categories_count }}"/>
                 <input id="count_terms" type="hidden" value="{{ terms_count }}"/>
                 <input id="count_stock" type="hidden" value="{{ product_and_variations_count }}"/>
                 <input id="count_meta" type="hidden" value="{{ product_and_variations_count }}"/>
                 <input id="count_relationships" type="hidden" value="{{ fix_relationships_count }}"/>
                 <input id="sync_galerry_page" type="hidden" value="0"/>
+                <input id="register_reviews_in_st_page" type="hidden" value="0"/>
                 <input id="sync_category_page" type="hidden" value="0"/>
                 <span class="spinner"></span>
                 {{ nonces.trbl_update_count|raw }}
@@ -110,6 +120,7 @@
                 {{ nonces.trbl_sync_stock|raw }}
                 {{ nonces.fix_relationships|raw }}
                 {{ nonces.sync_deleted_meta|raw }}
+                {{ nonces.register_reviews_in_st|raw }}
             </li>
         </ul>
         {% if product_type_sync_needed %}
