--- a/templates/setup/translation-options.twig
+++ b/templates/setup/translation-options.twig
@@ -5,15 +5,28 @@
 
 <ul class="no-bullets">
     <li>
-        <label class="display-as-translated-yes">
-            <input type="radio" value="1" name="translation-option" {% if is_display_as_translated_checked %}checked="checked"{% endif %} />
-            {{ strings.label_display_as_translated|raw }}
+        <label class="wcml-translate-everything{% if is_translate_some_mode %} js-otgs-popover-tooltip{% endif %}"
+               {% if is_translate_some_mode %}
+               data-tippy-zindex="999999"
+               title="{{ strings.tooltip_translate_everything }}"
+               {% endif %}
+        >
+            <input type="radio" value="translate_everything" name="translation-option"
+                {% if is_translate_some_mode %} disabled="disabled"{% endif %}
+            />
+            {{ strings.label_translate_everything }}
         </label>
     </li>
     <li>
-        <label class="display-as-translated-no">
-            <input type="radio" value="2" name="translation-option" />
-            {{ strings.label_translated }}
+        <label class="wcml-translate-some">
+            <input type="radio" value="translate_some" name="translation-option" />
+            {{ strings.label_translate_some }}
+        </label>
+    </li>
+    <li>
+        <label class="wcml-display-as-translated">
+            <input type="radio" value="display_as_translated" name="translation-option" {% if is_display_as_translated_checked %}checked="checked"{% endif %} />
+            {{ strings.label_display_as_translated|raw }}
         </label>
     </li>
 </ul>
