[design-72] Fix WCML glitches - CSS related issues

--- a/templates/multi-currency/currency-switcher-options.twig
+++ b/templates/multi-currency/currency-switcher-options.twig
@@ -31,7 +31,7 @@
     <div class="wcml-section-header">
         <h3>{{ currency_switcher.headers.widget }}</h3>
     </div>
-    <div class="wcml-section-content">
+    <div class="wcml-section-content wcml-section-content__widget">
         <div class="wcml-section-content-inner">
             <table class="wcml-cs-list" {% if currency_switcher.widget_currency_switchers is empty %} style="display: none;" {% endif %}>
                 <thead>
