--- a/res/scss/management.scss
+++ b/res/scss/management.scss
@@ -138,10 +138,26 @@
 		> div:first-child {
 			margin-top: 1em;
 		}
+		&__widget {
+			margin-top: 0;
+
+			table {
+				margin-top: 1em;
+			}
+		}
 	}
 
 	.wcml-section-content-wide {
 		width: calc(100% - 360px);
+	}
+}
+@media (max-width: 768px) {
+	.wcml-section-content {
+		&__widget {
+			.button.alignright {
+				float: none;
+			}
+		}
 	}
 }
 
@@ -327,14 +343,17 @@ table.widefat.currency_settings_table {
 	width: 80px;
 	border-left: none;
 	clear: none;
-		td.wcml-col-delete,
-		td.wcml-col-edit {
-			vertical-align: middle;
-			text-align: center;
-			&:first-child {
-				border-left: 1px solid #e5e5e5;
-			}
+	th {
+		text-align: right;
+	}
+	td.wcml-col-delete,
+	td.wcml-col-edit {
+		vertical-align: middle;
+		text-align: center;
+		&:first-child {
+			border-left: 1px solid #e5e5e5;
 		}
+	}
 }
 
 
@@ -418,10 +437,10 @@ table.widefat.currency_settings_table {
 	}
 	&-inner {
 		display: grid;
-		grid-template-columns: 255px auto 100px;
+		grid-template-columns: 255px auto 80px;
 
 		@media(max-width: 782px) {
-			grid-template-columns: 120px auto 100px;
+			grid-template-columns: 120px auto 80px;
 		}
 	}
 	@media(min-width: 1200px) {
@@ -438,21 +457,27 @@ table.widefat.currency_lang_table {
 	border-right: none;
 	thead{
 		.currency-lang-flags {
-			height: 23px;
+			height: 35px;
+
+			@media(max-width: 520px) {
+				height: 28px;
+			}
 		}
 		tr {
-			height: 68px - 23px;
+			height: 68px - 35px;
 		}
 		td {
 			border-bottom: 0;
 			text-align: center;
 			padding: 3px 10px 1px 0;
 			font-size: 1em;
+			vertical-align: middle;
 		}
 		th {
 			padding-top: 0;
 			padding-bottom: 0;
 			text-align: center;
+			vertical-align: baseline;
 		}
 	}
 }
@@ -461,15 +486,6 @@ table.widefat.currency_lang_table {
 	width: 100%;
 	min-width: 70px;
 	position: relative;
-	&::after {
-		content: '';
-		position: absolute;
-		top: 1px;
-		bottom: 1px;
-		right: 0;
-		width: 15px;
-		background: linear-gradient(to right, transparent, #fff);
-	}
 }
 
 .currency_inner {
@@ -497,8 +513,15 @@ table.widefat.currency_lang_table {
 		}
 	}
 	.default_currency {
+		td {
+			vertical-align: middle;
+		}
 		@media (max-width: 782px) {
 			height: 55px;
+
+			select {
+				min-height: 36px !important;
+			}
 		}
 	}
 }
@@ -562,8 +585,8 @@ table.widefat.currency_lang_table {
 	width: 100%;
 	li {
 		float: left;
-		margin: 2px 4px 2px 0;
-		padding: 2px 8px;
+		margin: 3px 6px 3px 0;
+		padding: 4px 10px;
 		border: 1px solid #DFDFDF;
 		border-radius: 2px;
 		background: linear-gradient(to top, #ECECEC, #F9F9F9) repeat scroll 0 0 #F1F1F1;
@@ -972,9 +995,26 @@ Currency switcher dialog
 
 					.max-mind-apply {
 						margin-left: 10px;
-						padding: 4px 15px;
+						padding: 2px 15px;
 					}
+					.ant-input-affix-wrapper {
+						white-space: nowrap;
+
+						input {
+							height: 34px;
+							margin-right: 5px;
+
+							@media (max-width: 768px) {
+								width: 90%;
+							}
+						}
+						@media (max-width: 768px) {
+							width: 70%;
+						}
+					}
+
 				}
+
 			}
 			&-generate {
 				font-style: italic;
@@ -985,6 +1025,63 @@ Currency switcher dialog
 				position: absolute;
 				top: 15px;
 				right: 8px;
+			}
+		}
+	}
+}
+
+@media (max-width: 980px) {
+	.wcml-tabs {
+		margin-left: 0 !important;
+
+		.nav-tab-active {
+			padding-bottom: 5px !important;
+		}
+	}
+	.wcml-product-translation-filtering {
+		select {
+			margin: 0 5px 5px 0;
+		}
+		button {
+			padding: 5px 15px !important;
+		}
+	}
+}
+@media (max-width: 768px) {
+	.wcml-table-responsive {
+		display: block;
+		width: 100%;
+		overflow-x: auto;
+
+		table {
+			table-layout: auto !important;
+			width: 100%;
+			max-width: 100%;
+
+			.wpml-col-title {
+				min-width: 100px;
+
+				.row-actions {
+					position: initial;
+					padding-left: 0;
+					margin-left: 0;
+					align-items: center;
+				}
+			}
+			.wpml-col-languages {
+				white-space: nowrap;
+				min-width: 60px;
+			}
+
+		}
+	}
+}
+
+.exchange-rates-sources {
+	.service-details-wrap {
+		input {
+			@media (max-width: 500px) {
+				width: 100%;
 			}
 		}
 	}
