[design-78] Fix too many numbers in exchange rate currency table

--- a/res/scss/management.scss
+++ b/res/scss/management.scss
@@ -292,6 +292,15 @@ table.widefat.currency_table {
 		padding-top: $margin-xs;
 		padding-bottom: 0;
 		vertical-align: top;
+
+		span.rate {
+			display: inline-block;
+			white-space: nowrap;
+			overflow: hidden;
+			text-overflow: ellipsis;
+			max-width: 65px;
+			vertical-align: bottom;
+		}
 	}
 
 	td.wcml-col-currency {
