--- a/templates/menus-wrap.twig
+++ b/templates/menus-wrap.twig
@@ -33,7 +33,6 @@
             <a class="nav-tab {{ menu.settings.active }}" href="{{ menu.settings.url }}">{{ menu.settings.name }}</a>
         {% endif %}
         {%  if can_operate_options %}
-            <a class="nav-tab {{ menu.multi_currency.active }}" href="{{ menu.multi_currency.url }}">{{ menu.multi_currency.name }}</a>
             <a class="nav-tab {{ menu.slugs.active }}" href="{{ menu.slugs.url }}">{{ menu.slugs.name }}</a>
         {% endif %}
         {% if can_manage_options %}
@@ -41,6 +40,9 @@
             {% if menu.troubleshooting.active %}
                 <a class="nav-tab troubleshooting {{ menu.troubleshooting.active }}" href="{{ menu.troubleshooting.url }}">{{ menu.troubleshooting.name }}</a>
             {% endif %}
+        {% endif %}
+        {%  if can_operate_options %}
+            <a class="nav-tab {{ menu.multi_currency.active }}" href="{{ menu.multi_currency.url }}">{{ menu.multi_currency.name }}</a>
         {% endif %}
     </nav>
 
