Show explanation when it's not possible to add a currency switcher widget
https://onthegosystems.myjetbrains.com/youtrack/issue/wcml-3950

--- a/templates/multi-currency/currency-switcher-options.twig
+++ b/templates/multi-currency/currency-switcher-options.twig
@@ -94,15 +94,19 @@
                 </tbody>
             </table>
             <div class="tablenav top clearfix">
+                {% if currency_switcher.available_sidebars is not empty %}
                 <button type="button" class="button button-secondary alignright wcml_add_cs_sidebar js-wcml-cs-dialog-trigger"
                         data-switcher="new_widget"
                         data-dialog="wcml_currency_switcher_options_new_widget"
                         data-content="wcml_currency_switcher_options_new_widget"
                         data-height="800" data-width="700"
-                        {% if currency_switcher.available_sidebars is empty %}style="display:none"{% endif %}>
+                >
                     <i class="otgs-ico-add otgs-ico-sm"></i>
                     {{ currency_switcher.headers.add_widget }}
                 </button>
+                {% else %}
+                    {{ currency_switcher.headers.no_sidebar|raw }}
+                {% endif %}
             </div>
             <input type="hidden" id="wcml_delete_currency_switcher_nonce" value="{{ currency_switcher.delete_nonce }}"/>
         </div>
