Disable the "Update manually now" button until we have an actionable exchange rate service
By actionable, we mean:
- Have a current service set
- The service does not require a key or has an non-empty key

I also added a small fix to re-init the tooltips when the exchange rate
section is enabled because invisible tooltips are not initialized.
That way, the user will have the tooltip explaining why the "Update
manually now" button is disabled.

https://onthegosystems.myjetbrains.com/youtrack/issue/wcml-3996

--- a/templates/multi-currency/exchange-rates.twig
+++ b/templates/multi-currency/exchange-rates.twig
@@ -22,8 +22,12 @@
 
             <p>
                 <input type="button" id="update-rates-manually" class="button-secondary"
-                       value="{{ exchange_rates.strings.update }}" />
-                <i class="otgs-ico-help wcml-tip" data-tip="{{ exchange_rates.strings.update_tip }}" style="display: none"></i>
+                       value="{{ exchange_rates.strings.update }}"
+                       {% if not exchange_rates.has_actionable_service %}disabled="disabled"{% endif %}
+                />
+                <i class="otgs-ico-help wcml-tip" data-tip="{{ exchange_rates.strings.update_tip }}"
+                   {% if exchange_rates.has_actionable_service %}style="display: none"{% endif %}
+                ></i>
                 <span id="update-rates-spinner" class="spinner" style="float:none;"></span>
                 <input type="hidden" id="update-exchange-rates-nonce" value="{{ exchange_rates.strings.nonce }}"/>
             </p>
