Force users to run the wizard.
https://onthegosystems.myjetbrains.com/youtrack/issue/wcml-4224

--- a/res/scss/admin.scss
+++ b/res/scss/admin.scss
@@ -131,6 +131,7 @@ div[data-selector="wpbody-content .woocommerce h2"] a{
   }
 }
 
+body.wpml-wcml-products,
 body.wpml-wcml-multilingual {
   #wpwrap {
     background-color: #fff;
