Add a selector to make CC happy
I could of added new methods to page object but its going to be unnecesarily complicating things.
Adding this selector here makes both wizards (small & big) equivalent as far as CC is concerned

https://onthegosystems.myjetbrains.com/youtrack/issue/wcml-4232/Fix-WCMLInstallationChecksCest

--- a/templates/setup/wizard-notice.twig
+++ b/templates/setup/wizard-notice.twig
@@ -1,4 +1,4 @@
-<div class="wcml-banner">
+<div id="wcml-setup-wizard" class="wcml-banner">
     <p>{{ text.prepare }}</p>
     <p>{{ text.help }}</p>
     <ul class="wcml-notice-list">
