--- a/res/scss/wcml-setup.scss
+++ b/res/scss/wcml-setup.scss
@@ -261,3 +261,28 @@ body {
 		opacity: 1;
 	}
 }
+
+.translation-options ul {
+    column-count: 2;
+    display: flex;
+    align-items: stretch;
+    column-gap: 20px;
+    padding: 0;
+	li {
+		flex: 1;
+		border: 2px solid rgba(51,135,158,0.5);
+		border-radius: 5px;
+		label {
+			display: block;
+			margin: 40px 10px;
+			text-align: center;
+			height: 100%;
+			position: relative;
+		}
+		input[type=radio] {
+			position: absolute;
+			top: -20px;
+			right: 0px;
+		}
+	}
+}
