--- a/templates/setup/multi-currency.twig
+++ b/templates/setup/multi-currency.twig
@@ -1,15 +1,17 @@
 <span id="{{ strings.step_id }}">
 <h1>{{ strings.heading }}</h1>
 
-<p>{{ strings.description }}</p>
+<div>{{ strings.description }}</div>
 
-<p>
-    <label>
-        <input type="checkbox" value="1" name="enabled" {% if multi_currency_on %}checked="checked"{% endif %} />&nbsp;{{ strings.label_mco }}
-    </label>
-</p>
+<ul>
+    <li>{{ strings.bullet1 }}</li>
+    <li>{{ strings.bullet2 }}</li>
+    <li>{{ strings.bullet3 }}</li>
+    <li><a target="_blank" class="wpml-external-link" rel="noopener" href="{{ documentation_url }}">{{ strings.bullet4 }}</a></li>
+</ul>
 
 <p class="wcml-setup-actions step">
-    <a href="{{ continue_url }}" class="button button-large button-primary submit">{{ strings.continue }}</a>
+    <a href="{{ continue_url }}&enabled=1" class="submit">{{ strings.enable }}</a>
+    <a href="{{ continue_url }}&enabled=0" class="button button-large button-primary submit">{{ strings.continue }}</a>
 </p>
 </span>
