--- a/templates/setup/attributes.twig
+++ b/templates/setup/attributes.twig
@@ -7,7 +7,7 @@
     <li>
         <label>
             <input type="hidden" name="attributes[{{ attribute.name }}]" value="0" />
-            <input type="checkbox" name="attributes[{{ attribute.name }}]" value="1" {% if attribute.translated %}checked="cehcked"{% endif %} />
+            <input type="checkbox" name="attributes[{{ attribute.name }}]" value="1" {% if attribute.translated %}checked="checked"{% endif %} />
             {{ attribute.label }}
         </label>
     </li>
