--- a/templates/setup/header.twig
+++ b/templates/setup/header.twig
@@ -9,6 +9,7 @@
     {{ wp_do_action( 'admin_head' ) }}
 </head>
 <body class="wcml-setup wp-core-ui">
+<div class="wcml-setup__wrapper">
 <h1 id="wcml-logo"><a href="https://wpml.org/woocommerce-multilingual"><img
                 src="{{ WCML_PLUGIN_URL }}/res/images/banner-772x120.png"
                 alt="WooCommerce Multilingual"/></a></h1>
