--- a/templates/setup/translation-options.twig
+++ b/templates/setup/translation-options.twig
@@ -3,25 +3,30 @@
 
 <div class="translation-options">
     <ul class="no-bullets">
-        <li>
+        <li{% if is_translate_some_mode %} class="disabled"{% endif %}>
             <label class="wcml-translate-everything{% if is_translate_some_mode %} js-otgs-popover-tooltip{% endif %}"
                 {% if is_translate_some_mode %}
                 data-tippy-zindex="999999"
                 title="{{ strings.tooltip_translate_everything }}"
                 {% endif %}
             >
+                <span class="wpml-translate-choose">{{ strings.label_choose }}</span>
                 <input type="radio" value="translate_everything" name="translation-option" required
                     {% if is_translate_some_mode %} disabled="disabled"{%else%} checked="checked"{% endif %}
                 />
-                <strong>{{ strings.label_translate_everything }}</strong>
+                <div class="wcml-icon"><i class="otgs-ico otgs-ico-lightning-o"></i></div>
+                <h3>{{ strings.label_translate_everything }}</h3>
                 <p>{{ strings.description_translate_everything }}</p>
             </label>
         </li>
         <li>
             <label class="wcml-translate-some">
+                <span class="wpml-translate-choose">{{ strings.label_choose }}</span>
                 <input type="radio" value="translate_some" name="translation-option" required
                     {% if is_translate_some_mode %} checked="checked"{% endif %}
                 />
+                <div class="wcml-icon"><i class="otgs-ico otgs-ico-wpml-translation-management"></i></div>
+                <h3>{{ strings.label_translate_some }}</h3>
                 <strong>{{ strings.label_translate_some }}</strong>
                 <p>{{ strings.description_translate_some }}</p>
             </label>
@@ -29,7 +34,7 @@
     </ul>
 </div>
 
-<p>{{ strings.description_footer|format('<strong>','</strong>')|raw }}</p>
+<p class="text-center">{{ strings.description_footer|format('<strong>','</strong>')|raw }}</p>
 
 <p class="wcml-setup-actions step">
     <a href="{{ continue_url }}" class="button button-large button-primary submit">{{ strings.continue }}</a>
