--- a/res/scss/_variables.scss
+++ b/res/scss/_variables.scss
@@ -6,4 +6,32 @@ $margin-base: 30px;
 $margin-sm: 15px;
 $margin-xs: 7px;
 
-$wpml-blue: #21759b;
+//paddings
+$padding-base: 8px;
+$padding-sm: 16px;
+$padding-md: 24px;
+$padding-lg: 32px;
+$padding-xl: 40px;
+$padding-xxl: 48px;
+$padding-jumbo: 60px;
+
+$wpml-blue: #33879e;
+$wpml-blue-light: #47a5bf;
+$wpml-blue-lightest: #EBF3F5;
+
+$wpml-red: #c8471f;
+$wpml-red-light: #db552b; //#da552a;
+
+$wpml-green: #27AD95;
+$wpml-green-lightest: #dff3ef;
+
+$wpml-orange: #E8AE57;
+
+$gray-dark: #373737;
+$gray-dim: #666;
+$gray-light: #ccc;
+$gray-lighter: #eaeaea;
+$gray-lightest: #f5f5f5;
+$border-light: #ddd;
+
+$border-radius: 5px;
