[wcml-4314] Update wcml logo in wizard

--- a/templates/setup/header.twig
+++ b/templates/setup/header.twig
@@ -11,7 +11,7 @@
 <body class="wcml-setup wp-core-ui">
 <div class="wcml-setup__wrapper">
 <h1 id="wcml-logo"><a href="https://wpml.org/woocommerce-multilingual"><img
-                src="{{ WCML_PLUGIN_URL }}/res/images/banner-772x120.png"
+                src="{{ WCML_PLUGIN_URL }}/res/images/wcml-logo.png"
                 alt="WooCommerce Multilingual"/></a></h1>
 
 {% if has_handler %}
