[wcml-4361] 2nd iteration with WCML wizard changes
- Removed the link on the logo.
- Removed the old "after setup" notice with a link to our public doc.
- Removed the last wizard step ("ready"), and redirect to the TM
  dashboard instead with a new notice.
- Added a "Go back" link on each wizard step.
- Changed some texts in the wizard.
- Fixed the bullet count on the last step (when selecting "display as
  translated" or just "translatable").
- Adjusted the `utm_term` in the wizard doc links.

https://onthegosystems.myjetbrains.com/youtrack/issue/wcml-4361

--- a/templates/setup/attributes.twig
+++ b/templates/setup/attributes.twig
@@ -1,6 +1,9 @@
 <span id="{{ strings.step_id }}">
 <h1>{{ strings.heading|raw }}</h1>
 
+<p>{{ strings.description_1|raw }}</p>
+<p>{{ strings.description_2 }}</p>
+
 {% if attributes %}
     <ul class="no-bullets" >
     {% for attribute in attributes %}
@@ -18,6 +21,7 @@
 {% endif %}
 
 <p class="wcml-setup-actions step">
+    <a href="{{ go_back_url }}" class="go-back">{{ strings.go_back }}</a>
     <a href="{{ continue_url }}" class="button button-large button-primary submit">{{ strings.continue }}</a>
 </p>
 </span>
