--- a/templates/setup/display-as-translated.twig
+++ b/templates/setup/display-as-translated.twig
@@ -19,6 +19,7 @@
 <p>{{ strings.description_footer|format('<strong>','</strong>')|raw }}</p>
 
 <p class="wcml-setup-actions step">
+    <a href="{{ go_back_url }}" class="go-back">{{ strings.go_back }}</a>
     <a href="{{ continue_url }}" class="button button-large button-primary submit">{{ strings.continue }}</a>
 </p>
 </span>
