--- a/templates/setup/header.twig
+++ b/templates/setup/header.twig
@@ -10,9 +10,9 @@
 </head>
 <body class="wcml-setup wp-core-ui">
 <div class="wcml-setup__wrapper">
-<h1 id="wcml-logo"><a href="https://wpml.org/woocommerce-multilingual"><img
+<h1 id="wcml-logo"><img
                 src="{{ WCML_PLUGIN_URL }}/res/images/wcml-logo.png"
-                alt="WooCommerce Multilingual"/></a></h1>
+                alt="WooCommerce Multilingual"/></h1>
 
 {% if has_handler %}
 <form class="wcml-setup-form" method="post">
