--- a/templates/setup/multi-currency.twig
+++ b/templates/setup/multi-currency.twig
@@ -11,6 +11,7 @@
 </ul>
 
 <p class="wcml-setup-actions step">
+    <a href="{{ go_back_url }}" class="go-back">{{ strings.go_back }}</a>
     <a href="{{ continue_url }}&enabled=1" class="button button-primary submit">{{ strings.enable }}</a>
     <a href="{{ continue_url }}&enabled=0" class="button button-primary submit">{{ strings.continue }}</a>
 </p>
