--- a/templates/setup/store-pages.twig
+++ b/templates/setup/store-pages.twig
@@ -6,6 +6,7 @@
 {{ store_pages|raw }}
 
 <p class="wcml-setup-actions step">
+    <a href="{{ go_back_url }}" class="go-back">{{ strings.go_back }}</a>
     <a href="{{ continue_url }}" class="button button-primary button-large submit">{{ strings.continue }}</a>
 </p>
 </span>
