--- a/templates/nav-menus-full.twig
+++ b/templates/nav-menus-full.twig
@@ -5,24 +5,24 @@
             {% if taxonomy.is_translatable %}
                 <a class="js-tax-tab-{{ key }} nav-tab {{ taxonomy.active }}" href="{{ taxonomy.url }}" title="{{ taxonomy.title }}">
                     {{ taxonomy.name }}
-                    {% if taxonomy.translated == false %}<i class="otgs-ico-warning"></i>{% endif %}
+                    {% if taxonomy.warning %}<i class="otgs-ico-warning"></i>{% endif %}
                 </a>
             {% endif %}
         {% endfor %}
         {%  if menu.custom_taxonomies.show  %}
             <a class="nav-tab tax-custom-taxonomies {{ menu.custom_taxonomies.active }}" href="{{ menu.custom_taxonomies.url }}">
                 {{ menu.custom_taxonomies.name }}
-                {% if menu.custom_taxonomies.translated == false %}<i class="otgs-ico-warning"></i>{% endif %}
+                {% if menu.custom_taxonomies.warning %}<i class="otgs-ico-warning"></i>{% endif %}
             </a>
         {% endif %}
         <a class="nav-tab tax-product-attributes {{ menu.attributes.active }}" href="{{ menu.attributes.url }}">
             {{ menu.attributes.name }}
-            {% if menu.attributes.translated == false %}<i class="otgs-ico-warning"></i>{% endif %}
+            {% if menu.attributes.warning %}<i class="otgs-ico-warning"></i>{% endif %}
         </a>
         {% if menu.shipping_classes.is_translatable %}
             <a class="js-tax-tab-product_shipping_class nav-tab {{ menu.shipping_classes.active }}" href="{{ menu.shipping_classes.url }}"
                title="{{ menu.shipping_classes.title }}">{{ menu.shipping_classes.name }}
-                {% if menu.shipping_classes.translated == false %}<i class="otgs-ico-warning"></i>{% endif %}
+                {% if menu.shipping_classes.warning %}<i class="otgs-ico-warning"></i>{% endif %}
             </a>
         {% endif %}
     {% endif %}
